--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>
     Primera preentrega JS
 </h1>
-    <script src="./js/main.js"></script>
+    <script src="./JS/main.js"></script>
 
 </body>
 </html>
